# minstall_project

./: .gitignore  BUILD.md  cli.py  config.py  core.py  gui.py  i18n.py  icons.py  log_panel.py  main.py  profiles.py  pyproject.toml  scanner.py  stats.py  updater.py
.github/workflows/: build.yml  release.yml
.kilo/: kilo.json
i18n/: en.json  ru.json
profiles/: developer.json  minimal.json  office.json
tests/: test_core.py
tools/: import_winget.py
